@@ -55,6 +55,7 @@ Features
   to define a relaxation, but that are not part of any checked constraints. Essentially, these variables should only be used
   in the current SCIP solve and disregarded after a restart or in SCIP copies. Hence, these variables are not copied by SCIPcopy and
   SCIPgetVarCopy, they are currently not used in conflict constraints, and cuts involving them are not upgraded to linear constraints.
+  Relaxation-only variables cannot appear in the objective function.
 
 
 Performance improvements
